# polar-disk-freq

./: CITATION.cff  Cargo.toml  pyproject.toml  readme.rst
python/polar_disk_freq/: __init__.py  analytic.py  db.py  integrate.py  jmax.py  mc.py  params.py  precession.py  rk4.py  search.py  system.py  utils.py
python/tests/: system_init_test.py  test_params.py  test_rk4.py  test_system.py
src/: lib.rs  solve.rs
